...
    private var filteredClasses: Results<Class>?
    
    /// The search controller used to filter the table view
    private lazy var searchController: UISearchController = {
        let controller = UISearchController(searchResultsController: nil)
        controller.searchBar.delegate = self
        controller.searchBar.placeholder = "Search"
        return controller
    }()
    
    /// Returns whether the search controller is active or not
    private var isSearchActive: Bool {
        return searchController.isActive && searchController.searchBar.text != ""
...
        guard !isSearchActive else { return false }
        return true
    }
    
    @available(iOS 11.0, *)
    override func tableView(_ tableView: UITableView, leadingSwipeActionsConfigurationForRowAt indexPath: IndexPath) -> UISwipeActionsConfiguration? {
        let favorite = UIContextualAction(style: .normal, title: "Favorite", handler: { action, view, finished in
            finished(true)
            DispatchQueue.main.asyncAfter(deadline: .now() + 0.3) {
                self.didFavoriteClass(at: indexPath)
            }
        })

...
            finished(true)
        })
        
        edit.backgroundColor = UIColor.info
        edit.image = #imageLiteral(resourceName: "EditIcon")
        
        let delete = UIContextualAction(style: .normal, title: "Delete", handler: { _, _, finished in
            self.handleDelete(at: indexPath)
            finished(true)
        })
        
        delete.backgroundColor = UIColor.warning
        delete.image = #imageLiteral(resourceName: "EraseIcon")
...
        if path.section == 0 {
            var regSection: Int = 0
            for (i, arr) in classes.enumerated() { if arr.firstIndex(of: classToDel) != nil && i != 0 { regSection = i; break } }

            // Delete object in favorites section
            self.deleteCellWithObject(classToDel, section: path.section,
                                      snackTitle: "Class deleted", buttonTitle: "UNDO",
                                      allowsUndo: false, completion: nil)
            // Delete object in normal section
            self.deleteCellWithObject(classToDel, section: regSection,
                                      snackTitle: "Class deleted", buttonTitle: "UNDO",
                                      allowsUndo: true, completion: { [weak self] (undone, obj) in
                guard !undone else { return }
...
