...
                                            </constraint>
                                            <constraint firstAttribute="width" constant="250" id="YKt-Yk-4VV">
                                                <variation key="heightClass=regular-widthClass=regular" constant="450"/>
                                            </constraint>
                                        </constraints>
                                        <segments>
                                            <segment title="College"/>
                                            <segment title="High School"/>
                                        </segments>
                                        <color key="tintColor" red="0.2125631719827652" green="0.22421877086162567" blue="0.3765733540058136" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <connections>
                                            <action selector="schoolTypeChanged:" destination="PYQ-dE-ErG" eventType="valueChanged" id="Vdz-Ap-z7A"/>
                                        </connections>
...
                                            </constraint>
                                            <constraint firstAttribute="width" constant="250" id="p77-TO-BSs">
                                                <variation key="heightClass=regular-widthClass=regular" constant="450"/>
                                            </constraint>
                                        </constraints>
                                        <segments>
                                            <segment title="A+"/>
                                            <segment title="Non-A+"/>
                                        </segments>
                                        <color key="tintColor" red="0.21256317199999999" green="0.2242187709" blue="0.37657335400000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <connections>
                                            <action selector="gradingTypeChanged:" destination="PYQ-dE-ErG" eventType="valueChanged" id="l6t-S4-Flw"/>
                                        </connections>
...
                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="40"/>
                                </variation>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YGN-eO-2Aa">
                                <rect key="frame" x="28" y="692" width="358" height="36"/>
                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
                                <state key="normal" title="Cool, lets start!">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <variation key="heightClass=regular-widthClass=regular">
                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="30"/>
                                </variation>
                                <connections>
...
